# Triangles

./: CMakeLists.txt  main.cpp  tests.cpp
include/: interval.h  line.h  octree.h  plane.h  point.h  test_interface.h  triangle.h  utilities.h  vector.h
modules_unit_tests/: CMakeLists.txt  test_interval.cpp  test_octree.cpp  test_vector.cpp
src/: interval.cpp  line.cpp  octree.cpp  plane.cpp  point.cpp  test_interface.cpp  triangle.cpp  utilities.cpp  vector.cpp
tests/: test1.txt  test2.txt  test3.txt  test_gen.py
unit_tests/: CMakeLists.txt  test_interval.cpp  test_octree.cpp  test_plane.cpp  test_point.cpp  test_triangle.cpp  test_vector.cpp
